--- a/MyBaseProject/clubsapp/templates/clubsapp/base.html
+++ b/MyBaseProject/clubsapp/templates/clubsapp/base.html
@@ -6,6 +6,7 @@
 	<title>{%block title%}Главная{%endblock%}</title>
 	<link rel="stylesheet" type="text/css" href="{%static 'MyBaseProject/style.css' %}">
 	<link rel="stylesheet" href="{% static 'MyBaseProject/fonts/font-awesome/css/font-awesome.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     {%block css%}
     {%endblock%}
 </head>
@@ -25,8 +26,6 @@
 </div>
     {%block content%}
     {%endblock%}
-    <div class="clr"></div>
-
 </div>
 
 </body>
