--- a/MyBaseProject/stadiumsapp/templates/stadiumsapp/stadium.html
+++ b/MyBaseProject/stadiumsapp/templates/stadiumsapp/stadium.html
@@ -3,13 +3,14 @@
 {%block title%}{{ title|title }}{%endblock%}
 {%block content%}
 <div class="cards" style="display:flex">
-    {% for club in clubs %}
+    {% for stadium in stadiums %}
     <div class="card" style="width: 18rem;">
-        <img src="media/{{club.avatar}}" class="card-img-top" height="350" alt="avatar">
         <div class="card-body">
-            <h5 class="card-title">{{club.shrt_name}}</h5>
-            <p class="card-text">{{club.status}}</p>
-            <a href="{% url 'clubsapp:club_info' club.pk %}" class="btn btn-primary">Смотреть</a>
+            <h5 class="card-title">{{stadium.shrt_name}}</h5>
+            <p class="card-text">Статус: {{stadium.status}}</p>
+            <p class="card-text">Адрес: {{stadium.jur_addr}}</p>
+            <p class="card-text">Фактический адрес: {{stadium.fact_addr}}</p>
+            <a href="{% url 'stadiumsapp:stad_info' stadium.pk %}" class="btn btn-primary">Смотреть</a>
         </div>
     </div>
     {%endfor%}
