--- a/MyBaseProject/stadiumsapp/templates/stadiumsapp/stadium.html
+++ b/MyBaseProject/stadiumsapp/templates/stadiumsapp/stadium.html
@@ -1,4 +1,4 @@
-{%extends 'clubsapp/base.html'%}
+{%extends 'stadiumsapp/base.html'%}
 {%load static%}
 {%block title%}{{ title|title }}{%endblock%}
 {%block content%}
