--- a/MyBaseProject/attestationsapp/templates/attestationsapp/base.html
+++ b/MyBaseProject/attestationsapp/templates/attestationsapp/base.html
@@ -6,7 +6,6 @@
 	<title>{%block title%}Главная{%endblock%}</title>
 	<link rel="stylesheet" type="text/css" href="{%static 'MyBaseProject/style.css' %}">
 	<link rel="stylesheet" href="{% static 'MyBaseProject/fonts/font-awesome/css/font-awesome.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     {%block css%}
     {%endblock%}
 </head>
@@ -16,16 +15,17 @@
         <a href="{% url 'index' %}" class="logo"></a>
         {% if user.is_authenticated %}
             <ul class="menu">
-                <li><a href="{% url 'clubsapp:index' %}">Клубы</a></li>
+                <li><a href="{% url 'clubsapp:index' %}" >Клубы</a></li>
                 <li><a href="{% url 'clubstateapp:index' %}">Сотрудники Клуба</a></li>
-                <li><a href="{% url 'stadiumsapp:index' %}" class="active">Стадионы</a></li>
-                <li><a href="{% url 'attestationsapp:index' %}">Аттестация</a></li>
+                <li><a href="{% url 'stadiumsapp:index' %}">Стадионы</a></li>
+                <li><a href="{% url 'attestationsapp:index' %}" class="active">Аттестация</a></li>
                 <li><a href="{% url 'kdkapp:index' %}">КДК</a></li>
             </ul>
         {% endif %}
     </div>
     {%block content%}
     {%endblock%}
+    <div class="clr"></div>
 </div>
 
 </body>
