--- a/MyBaseProject/kdkapp/templates/kdkapp/base.html
+++ b/MyBaseProject/kdkapp/templates/kdkapp/base.html
@@ -18,9 +18,9 @@
             <ul class="menu">
                 <li><a href="{% url 'clubsapp:index' %}">Клубы</a></li>
                 <li><a href="{% url 'clubstateapp:index' %}">Сотрудники Клуба</a></li>
-                <li><a href="{% url 'stadiumsapp:index' %}" class="active">Стадионы</a></li>
+                <li><a href="{% url 'stadiumsapp:index' %}">Стадионы</a></li>
                 <li><a href="{% url 'attestationsapp:index' %}">Аттестация</a></li>
-                <li><a href="{% url 'kdkapp:index' %}">КДК</a></li>
+                <li><a href="{% url 'kdkapp:index' %}"class="active">КДК</a></li>
             </ul>
         {% endif %}
     </div>
