--- a/MyBaseProject/attestationsapp/templates/attestationsapp/attestation.html
+++ b/MyBaseProject/attestationsapp/templates/attestationsapp/attestation.html
@@ -1,4 +1,15 @@
 {%extends 'attestationsapp/base.html'%}
 {%load static%}
+{%block title%}{{ title|title }}{%endblock%}
 {%block content%}
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+    Dropdown button
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <li><a class="dropdown-item" href="#">Action</a></li>
+    <li><a class="dropdown-item" href="#">Another action</a></li>
+    <li><a class="dropdown-item" href="#">Something else here</a></li>
+  </ul>
+</div>
 {%endblock%}
