--- a/MyBaseProject/clubstateapp/templates/clubstateapp/base.html
+++ b/MyBaseProject/clubstateapp/templates/clubstateapp/base.html
@@ -7,7 +7,6 @@
 	<link rel="stylesheet" type="text/css" href="{%static 'MyBaseProject/style.css' %}">
 	<link rel="stylesheet" href="{% static 'MyBaseProject/fonts/font-awesome/css/font-awesome.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     {%block css%}
     {%endblock%}
 </head>
@@ -18,9 +17,9 @@
         {% if user.is_authenticated %}
             <ul class="menu">
                 <li><a href="{% url 'clubsapp:index' %}" >Клубы</a></li>
-                <li><a href="{% url 'clubstateapp:index' %}">Сотрудники Клуба</a></li>
+                <li><a href="{% url 'clubstateapp:index' %}" class="active">Сотрудники Клуба</a></li>
                 <li><a href="{% url 'stadiumsapp:index' %}">Стадионы</a></li>
-                <li><a href="{% url 'attestationsapp:index' %}" class="active">Аттестация</a></li>
+                <li><a href="{% url 'attestationsapp:index' %}">Аттестация</a></li>
                 <li><a href="{% url 'kdkapp:index' %}">КДК</a></li>
             </ul>
         {% endif %}
